--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wieis">Wie is de verhalenmaker?</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#wieis">Wie is de verhalenmaker? (test)</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#aanbevelingen">Aanbevelingen</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact2">Contact</a></li>
