--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Wie is de verhalenmaker?</h2>
-                    <h3 class="section-subheading text-muted">Annemieke Dubbeldeman | 1981 | Veluwezoom | allround pr & communicatie</h3>
+                    <h3 class="section-subheading text-muted">pr & communicatie | specialisme storytelling | portretfotograaf</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
@@ -56,12 +56,15 @@
                             <img class="mx-auto rounded-circle" src="assets/img/wieis/annemieke.jpg" alt="" />
                             <h4>Annemieke Dubbeldeman</h4>
                             <p class="text-muted"></p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/deverhalenmaker"><i class="fab fa-twitter"></i></a><a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/annemiekedubbeldeman/"><i class="fab fa-linkedin-in"></i></a><a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/deverhalenmaker/"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/annemiekedubbeldeman/"><i class="fab fa-linkedin-in"></i></a><a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/deverhalenmaker/"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">Overal om ons heen zijn verhalen. Verhalen uit het verleden, het heden en de toekomst. Ik teken ze graag op, of het nu in tekst is, in beeld of beide. Als zelfstandige op het gebied van pr/communicatie, ben ik voor korte en langdurende projecten in te zetten in alle sectoren (profit en non-profit). Naast verhalen kan ik ook andere soorten teksten schrijven, deze kunnen variëren van een informatieve tekst voor een website of een folder tot columns en meer verdiepende artikelen. Denk ook aan promotiecampagnes, social media, persberichten en magazines (van het schrijven van content tot hoofdredactie). In mijn portfolio staan projecten die ik al eerder deed. Uit de aanbevelingen kun je opmaken dat ik enthousiast en professioneel te werk ga, graag buiten kaders denk en op luchtige, aansprekende en soms humoristische toon communiceer.</p></div>
+                    <div class="col-lg-8 mx-auto text-center"><p class="large text-muted">"Wat een leuk werk heb jij!" – Ik hoor het vaak als ik met mensen in gesprek ben. En ja, het klopt helemaal! Ik heb geweldig werk. Met iemand praten over iets wat diegene graag doet, is fantastisch. Of het nu om werk, een vrijwilligersjob of een hobby gaat: mensen vertellen er vaak graag over. En ik werk hun verhalen met plezier uit tot een lekker leesbaar stuk.
+Storytelling dus: een goed geschreven tekst neemt de lezer even mee naar een andere wereld. Denk aan testimonials van medewerkers die potentiële collega’s meer inzicht geven in een functie en de organisatie. Of aan ervaringsverhalen van vrijwilligers, die anderen inspireren om zelf ook de stap te zetten en iets te gaan doen.
+Deze verhalen geven pr en communicatie meer body. Naast schrijver ben ik ook fotograaf, waardoor ik direct een portret kan schieten. Maar een foto is niet altijd nodig en ook telefonisch of via een videogesprek kan ik prima uit de voeten. Aanbevelingen laten zien dat ik enthousiast en professioneel werk, graag buiten de kaders denk en op een luchtige, aansprekende toon communiceer.
+Als zelfstandige op het gebied van pr en communicatie ben ik inzetbaar voor zowel korte als langdurige projecten. Naast verhalen schrijf ik ook teksten voor websites, folders en meer verdiepende artikelen. Daarnaast heb ik ervaring met promotiecampagnes, social media, persberichten en magazines (waarbij ik zowel content schrijf als redactie voer). In mijn portfolio staan projecten die ik eerder heb gerealiseerd.</p></div>
                 </div>
             </div>
         </section>
