--- a/index.html
+++ b/index.html
@@ -75,7 +75,33 @@ Als zelfstandige op het gebied van pr en communicatie ben ik inzetbaar voor zowe
                     <h2 class="section-heading text-uppercase">Portfolio</h2>
                 </div>
                 <div class="row">
-                  <div class="col-lg-4 col-sm-6 mb-4">
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal13"
+                                ><div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/13-thumbnail.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Testimonials</div>
+                            </div>
+                        </div>
+                    </div>     
+                    <div class="col-lg-4 col-sm-6 mb-4">
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal12"
+                                ><div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/12-thumbnail.jpg" alt=""
+                            /></a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Magazine Landelijke Vrijwilligersprijzen</div>
+                            </div>
+                        </div>
+                    </div>                  
+                    <div class="col-lg-4 col-sm-6 mb-4">
                       <div class="portfolio-item">
                           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal11"
                               ><div class="portfolio-hover">
@@ -323,6 +349,50 @@ Als zelfstandige op het gebied van pr en communicatie ben ik inzetbaar voor zowe
                 </div>
             </div>
         </footer>
+        <!-- Portfolio Modals--><!-- Modal 13-->
+        <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here-->
+                                    <h2 class="text-uppercase">Testimonials</h2>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/13-full.jpg" alt="" />
+                                    <!--<p>2021 was het Nationaal Jaar Vrijwillige Inzet. In het kader hiervan heb ik voor de landelijke campagne Mensen Maken Nederland 100 verhalen over vrijwilligers geschreven. Een aantal heb ik zelf gefotografeerd. Ook voor de campagne Good Busy schreef ik verhalen. Good Busy richt zich op de maatschappelijke betrokkenheid van bedrijven.</p>-->
+                                    <p>Portretten van medewerkers. Kort, enthousiasmerend, lekker leesbaar. Ik schreef ze voor de provincie Utrecht, Vitens en gemeente Nijmegen.<p>
+                                      <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Sluiten</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio Modals--><!-- Modal 12-->
+        <div class="portfolio-modal modal fade" id="portfolioModal12" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project Details Go Here-->
+                                    <h2 class="text-uppercase">Magazine Landelijke Vrijwilligersprijzen</h2>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/12-full.jpg" alt="" />
+                                    <!--<p>2021 was het Nationaal Jaar Vrijwillige Inzet. In het kader hiervan heb ik voor de landelijke campagne Mensen Maken Nederland 100 verhalen over vrijwilligers geschreven. Een aantal heb ik zelf gefotografeerd. Ook voor de campagne Good Busy schreef ik verhalen. Good Busy richt zich op de maatschappelijke betrokkenheid van bedrijven.</p>-->
+                                    <p>Echt! Zo heet het magazine dat is verschenen tijdens de Landelijke Vrijwilligersprijzen in 2024. Samen met hoofdredacteur Chulah Berkowitz werkte ik aan het vormen van de inhoud en schreef ik meerdere verhalen en artikelen. Onder andere sprak ik met landelijke politici over vrijwilligersbeleid en ging ik langs bij vrijwilligers om hun verhaal in beeld te brengen.<p>
+                                      <button class="btn btn-primary" data-dismiss="modal" type="button"><i class="fas fa-times mr-1"></i>Sluiten</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <!-- Portfolio Modals--><!-- Modal 11-->
         <div class="portfolio-modal modal fade" id="portfolioModal11" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
